// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.decision.v1alpha1;

import "teleport/decision/v1alpha1/enforcement_feature.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/decision/v1alpha1;decisionpb";

// Metadata for access denials.
message DenialMetadata {
  // FeatureAssertions is a list of EnforcementFeature that the PEP (Policy
  // Enforcement Point) *must* implement in order to correctly enforce the
  // decision. Note that denials rarely need feature assertions since they
  // typically "fail safe" anyway.
  repeated EnforcementFeature feature_assertions = 1;

  // PdpVersion is the version of the PDP (Policy Decision Point) that evaluated
  // the decision request.
  string pdp_version = 2;

  // UserMessage is a sanitized message safe for return to the subject identity
  // of the decision request.
  string user_message = 3;
}
